BL-5475 - Update Cookie Policy to include Hotjar

--- a/mot-behat/behat.yml
+++ b/mot-behat/behat.yml
@@ -62,6 +62,7 @@ default:
                 - TQIAeTesterPerformanceContext
                 - TQITesterPerformanceContext
                 - TQIComponentFailRateContext
+                - TQINotificationContext
                 - VehicleContext
                 - VtsContext
                 - VtsManagementContext
