--- a/mot-behat/composer.json
+++ b/mot-behat/composer.json
@@ -8,7 +8,10 @@
     "zalas/behat-no-extension": "~1.1",
     "guzzlehttp/guzzle": "~6.2.3",
     "smalot/pdfparser": "~0.10.0",
-    "fzaninotto/faker": "~1.6.0"
+    "fzaninotto/faker": "~1.6.0",
+    "aws/aws-sdk-php": "^3.26.3",
+    "elasticsearch/elasticsearch": "^5.3.0",
+    "jsq/amazon-es-php": "^0.2.0"
 
   },
   "autoload": {
