--- a/mot-common-web-module/composer.json
+++ b/mot-common-web-module/composer.json
@@ -5,7 +5,10 @@
         "dvsa/dvsa-document-module": "1.4.0",
         "dvsa/feature-toggle": "1.2.0",
         "dvsa/dvsa-doctrine-module": "1.2.0",
-        "dvsa/dvsa-application-logger": "2.0.2"
+        "dvsa/dvsa-application-logger": "2.0.2",
+        "aws/aws-sdk-php": "^3.26.3",
+        "elasticsearch/elasticsearch": "^5.3.0",
+        "jsq/amazon-es-php": "^0.2.0"
     },
     "repositories": [
         {
