--- a/mot-web-frontend/composer.json
+++ b/mot-web-frontend/composer.json
@@ -20,7 +20,10 @@
         "dvsa/dvsa-document-module": "1.4.0",
         "slot-purchase/web-frontend": "3.9.5",
         "dvsa/dvsa-openam-client": "1.11.1",
-        "zendframework/zend-view": "2.7.0"
+        "zendframework/zend-view": "2.7.0",
+        "aws/aws-sdk-php": "^3.26.3",
+        "elasticsearch/elasticsearch": "^5.3.0",
+        "jsq/amazon-es-php": "^0.2.0"
     },
     "autoload" : {
         "psr-0" : {
